fixed bug where a class got added to the two image element that shouldn‘t be there and fixed wrong css where bk_img had wrong margin sizes

--- a/_sass/blog/_blog-font.scss
+++ b/_sass/blog/_blog-font.scss
@@ -674,8 +674,8 @@ p.intro a:after {
 }
 
 .bk-blog-style p.bk_img {
-  width: calc(100% + 30px);
-  left: -15px;
+  width: calc(100% + 20px);
+  left: -10px;
   position: relative;
   @include media-query($medium){
     width: 100%;
